# llm-image-analyzer-mcp

./: .env.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: MCP_CLIENT_SETUP.md  PATH_RESOLUTION.md  PYDANTIC_AI_MIGRATION.md  QUICK_REFERENCE.md  ZED_SETUP.md
examples/: example_usage.md
src/llm_image_analyzer_mcp/: __init__.py  core.py  server.py
tests/: README.md  test_analyze_swan.py  test_path_resolution_fallback.py  test_structured_output.py  test_tool_signature.py
